--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ndshop",
   "version": "0.1.0",
+  "proxy": "https://subscription-api-ddg3.onrender.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
